# libgkit_graphic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pr-to-feishu.yml
cmake/: FindGLM.cmake
src/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp  debug.cpp  debug.hpp
src/core/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/debug/: debug.cpp  debug.hpp
src/openGL/: FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderBuffer.cpp  RenderBuffer.hpp  StateManager.cpp  StateManager.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBufferLayout.hpp  config.cpp  config.hpp
test/: CMakeLists.txt  basic.shader  test.cpp
